test: rename 'day' references to 'quest'